// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query component should render 1`] = `
<View>
  <Component
    testID="TestComponent"
  />
  <Button
    onPress={[Function]}
    testID="CrashButton"
    title="Crash"
  />
</View>
`;

exports[`Query component when loading should show the loading component 1`] = `<Loading />`;

exports[`Query component when not loading should not show the loading component 1`] = `
<Component>
  <Component
    testID="TestComponent"
  />
  <Button
    onPress={[Function]}
    testID="CrashButton"
    title="Crash"
  />
</Component>
`;

exports[`Query component when refetching should show the loading component 1`] = `<Loading />`;
